--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="background-image">
       <nav>
-        <img src="./image/Netflix logo.png" alt="logo" width="200px"></a>
+        <img src="./image/Netflix logo.png" alt="logo" width="200px" class="image"></a>
         <a href=""><button>Sign-In</button></a>
       </nav>
       <div class="movies">
