--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
         <div class="cards">
           <h3>Enjoy on your TV</h3>
           <p>Watch on Smart TVs, <br> Playstation, Xbox, <br> Chromecast, Apple TV, Blu-ray players, and more</p>
-          <img src="./images/image 11.png" alt="">
+          <img src="./image/image 11.png" alt="">
         </div>
 
         <div class="cards">
           <h3>Download your shows to watch offline</h3>
           <p>Save your favorites easily <br> and always have something <br> to watch.</p>
-          <img src="./images/image 22.png" alt="">
+          <img src="./image/image 22.png" alt="">
         </div>
 
         <div class="cards">
           <h3>Watch everywhere</h3>
           <p>Stream unlimited movies and <br> TV shows on your phone, <br> tablet, laptop, and TV.</p>
-          <img src="./images/image 33.png" alt="">
+          <img src="./image/image 33.png" alt="">
         </div>
 
         <div class="cards">
           <h3>Create profiles for kids</h3>
           <p>Send kids on adventures with <br> their favorite characters in a <br> space made just for them <br>— free with your membership.</p>
-          <img src="./images/image 44 (2).png" alt="">
+          <img src="./image/image 44 (2).png" alt="">
         </div>
 
       </div>
